--- a/config/default/views.view.browse_gks.yml
+++ b/config/default/views.view.browse_gks.yml
@@ -781,7 +781,7 @@ display:
               institution_key_contact: '0'
               manager: '0'
               administrator: '0'
-            placeholder: 'Type material made of'
+            placeholder: 'Type material made of (optional)'
           is_grouped: false
           group_info:
             label: ''
