corrected spelling in site name

--- a/config/default/system.site.yml
+++ b/config/default/system.site.yml
@@ -2,7 +2,7 @@ _core:
   default_config_hash: l58O_yEXSo-SeJi19LXdzTU1tNJG3lmnIhCitRkM1tk
 langcode: en
 uuid: f6c10dfd-432d-4281-9969-e35c22cb4180
-name: 'The Great Lakes Research Allance'
+name: 'The Great Lakes Research Alliance'
 mail: grasac@selectfix.com
 slogan: 'Great Lakes Research Alliance for the Study of Indigenous Arts and Cultures (GRASAC)'
 page:
