--- a/config/default/core.entity_form_display.node.heritage_item.default.yml
+++ b/config/default/core.entity_form_display.node.heritage_item.default.yml
@@ -96,7 +96,7 @@ third_party_settings:
       label: 'Physical Description'
       region: content
       parent_name: ''
-      weight: 15
+      weight: 14
       format_type: tab
       format_settings:
         classes: ''
@@ -117,7 +117,7 @@ third_party_settings:
       label: 'Makers and Origin'
       region: content
       parent_name: ''
-      weight: 14
+      weight: 13
       format_type: tab
       format_settings:
         classes: ''
@@ -139,7 +139,7 @@ third_party_settings:
       label: 'Item History'
       region: content
       parent_name: ''
-      weight: 16
+      weight: 15
       format_type: tab
       format_settings:
         classes: ''
@@ -160,7 +160,7 @@ third_party_settings:
       label: 'About this Grasac Record'
       region: content
       parent_name: ''
-      weight: 17
+      weight: 16
       format_type: tab
       format_settings:
         classes: ''
@@ -178,7 +178,7 @@ third_party_settings:
       label: 'Related Items'
       region: content
       parent_name: ''
-      weight: 18
+      weight: 17
       format_type: tab
       format_settings:
         classes: ''
@@ -195,12 +195,11 @@ third_party_settings:
         - field_filter_date_made
         - field_date_attribution
         - field_related_seasonal_time
-        - field_date_seasonal_time
         - field_associated_ceremonial_time
       label: 'Dates and Times for this item'
       region: content
       parent_name: ''
-      weight: 13
+      weight: 12
       format_type: tab
       format_settings:
         classes: ''
@@ -219,7 +218,7 @@ third_party_settings:
       label: 'Item Identification'
       region: content
       parent_name: ''
-      weight: 12
+      weight: 11
       format_type: tab
       format_settings:
         classes: ''
@@ -385,7 +384,7 @@ content:
     third_party_settings: {  }
   field_description_summary:
     type: text_textarea_with_summary
-    weight: 11
+    weight: 10
     region: content
     settings:
       rows: 9
@@ -455,7 +454,7 @@ content:
     third_party_settings: {  }
   field_geolocation:
     type: geolocation_leaflet
-    weight: 26
+    weight: 24
     region: content
     settings:
       auto_client_location: ''
@@ -1036,7 +1035,7 @@ content:
         maxlength_js_enforce: true
   field_image2:
     type: image_image
-    weight: 22
+    weight: 21
     region: content
     settings:
       progress_indicator: throbber
@@ -1044,7 +1043,7 @@ content:
     third_party_settings: {  }
   field_item_type:
     type: options_select
-    weight: 10
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -1086,7 +1085,7 @@ content:
     third_party_settings: {  }
   field_media_audio_video_docs_:
     type: media_library_widget
-    weight: 23
+    weight: 22
     region: content
     settings:
       media_types: {  }
@@ -1145,15 +1144,9 @@ content:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
-  field_region_of_origin:
-    type: options_select
-    weight: 24
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   field_region_origin_attribution:
     type: text_textarea
-    weight: 25
+    weight: 23
     region: content
     settings:
       rows: 5
@@ -1245,18 +1238,18 @@ content:
     third_party_settings: {  }
   publish_on:
     type: datetime_timestamp_no_default
-    weight: 21
+    weight: 20
     region: content
     settings: {  }
     third_party_settings: {  }
   publish_state:
     type: scheduler_moderation
-    weight: 19
+    weight: 18
     region: content
     settings: {  }
     third_party_settings: {  }
   scheduler_settings:
-    weight: 20
+    weight: 19
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -1312,6 +1305,7 @@ hidden:
   field_gks_id: true
   field_imagemy_media: true
   field_media_image_twoc: true
+  field_region_of_origin: true
   langcode: true
   promote: true
   sticky: true
