--- a/config/default/facets.facet.item_type.yml
+++ b/config/default/facets.facet.item_type.yml
@@ -30,7 +30,7 @@ widget:
   type: dropdown
   config:
     show_numbers: false
-    default_option_label: 'Type of item'
+    default_option_label: 'All Type of item'
 empty_behavior:
   behavior: none
 only_visible_when_facet_source_is_visible: true
