--- a/config/default/system.site.yml
+++ b/config/default/system.site.yml
@@ -3,7 +3,7 @@ _core:
 langcode: en
 uuid: f6c10dfd-432d-4281-9969-e35c22cb4180
 name: 'The Great Lakes Research Alliance'
-mail: grasac@selectfix.com
+mail: grasac.pm@utoronto.ca
 slogan: 'Great Lakes Research Alliance for the Study of Indigenous Arts and Cultures (GRASAC)'
 page:
   403: ''
