--- a/config/default/core.entity_view_display.node.language_item.full.yml
+++ b/config/default/core.entity_view_display.node.language_item.full.yml
@@ -55,7 +55,6 @@ third_party_settings:
         - links
         - content_moderation_control
         - field_languages
-        - field_part_of_speech
         - field_part_ofspeech
         - field_alternative_spellings
         - field_source
@@ -154,7 +153,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 8
+    weight: 7
     region: main
   field_audio_video:
     type: entity_reference_entity_view
@@ -191,7 +190,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 17
+    weight: 16
     region: main
   field_date_created:
     type: string
@@ -227,7 +226,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 10
+    weight: 9
     region: main
   field_folders:
     type: entity_reference_label
@@ -264,7 +263,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 16
+    weight: 15
     region: main
   field_languages:
     type: entity_reference_label
@@ -303,42 +302,6 @@ content:
             suffix: ''
     weight: 5
     region: main
-  field_part_of_speech:
-    type: string
-    label: inline
-    settings:
-      link_to_entity: false
-    third_party_settings:
-      ds:
-        ft:
-          id: expert
-          settings:
-            lb: ''
-            lbw: true
-            lbw-el: strong
-            lbw-cl: ''
-            lbw-at: ''
-            lb-col: true
-            ow: true
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            ow-def-at: true
-            ow-def-cl: true
-            fis: false
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fis-def-at: false
-            fi: false
-            fi-el: ''
-            fi-cl: ''
-            fi-at: ''
-            fi-def-at: false
-            prefix: ''
-            suffix: ''
-    weight: 6
-    region: main
   field_part_ofspeech:
     type: entity_reference_label
     label: above
@@ -374,7 +337,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 7
+    weight: 6
     region: main
   field_record_editable_by:
     type: entity_reference_label
@@ -411,7 +374,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 15
+    weight: 14
     region: main
   field_related_heritage_item:
     type: entity_reference_label
@@ -448,7 +411,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 11
+    weight: 10
     region: main
   field_related_language_item:
     type: entity_reference_label
@@ -485,7 +448,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 12
+    weight: 11
     region: main
   field_related_places:
     type: entity_reference_label
@@ -522,7 +485,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 13
+    weight: 12
     region: main
   field_source:
     type: entity_reference_label
@@ -558,7 +521,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 9
+    weight: 8
     region: main
   field_term_definition:
     type: basic_string
@@ -629,7 +592,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 14
+    weight: 13
     region: main
   links:
     settings: {  }
@@ -637,5 +600,6 @@ content:
     weight: 3
     region: main
 hidden:
+  field_part_of_speech: true
   langcode: true
   search_api_excerpt: true
