--- a/config/default/facets.facet.nation_of_maker.yml
+++ b/config/default/facets.facet.nation_of_maker.yml
@@ -19,13 +19,13 @@ field_identifier: field_nation_tid
 query_operator: or
 hard_limit: 0
 exclude: false
-use_hierarchy: false
+use_hierarchy: true
 keep_hierarchy_parents_active: false
 hierarchy:
   type: taxonomy
   config: {  }
-expand_hierarchy: false
-enable_parent_when_child_gets_disabled: true
+expand_hierarchy: true
+enable_parent_when_child_gets_disabled: false
 widget:
   type: dropdown
   config:
