--- a/config/default/search_api.index.content.yml
+++ b/config/default/search_api.index.content.yml
@@ -428,6 +428,12 @@ processor_settings:
   aggregated_field: {  }
   entity_status: {  }
   entity_type: {  }
+  hierarchy:
+    weights:
+      preprocess_index: -45
+    fields:
+      field_nation_tid: taxonomy_term-parent
+      field_part_ofspeech: taxonomy_term-parent
   highlight:
     weights:
       postprocess_query: 0
